# serverlessBlog

./: .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .prettierignore  .terraform-docs.yaml  .trivyignore  AGENTS.md  CLAUDE.md  README.md  TASKS.md  eslint.config.js  jest.config.cjs  jest.config.js  jest.integration.config.cjs  jest.integration.frontend.config.cjs  package-lock.json  package.json  playwright.admin.config.ts  playwright.aws.config.ts  playwright.config.ts
.ai/: agents.md  mcp.json
.ai-context/: .processed_requests  active-session.json
.ai-context/requests/: 20260116-082844-3b482eef-dbf8-41b1-b2a7-d6c9309980e0.json  20260116-111542-3443c6d5-d5a9-457e-8986-f78671ca027f.json  20260116-150000-c6c48934-4f97-4b8e-8f01-0738dbb39735.json  20260116-161134-9f7211bb-6784-4e47-b450-bf52e66e91be.json  20260116-162504-031817b3-d7fb-4490-81fa-8caf00328ff3.json  20260116-163500-aa5555fe-2cd2-4c5d-aa16-81dbba78eaad.json  20260116-164931-892649a2-5197-454e-8d6b-c750695b520b.json  20260116-184120-c2105e02-8739-4548-9401-118a0d842093.json  20260116-210200-067c913e-92f6-48d9-9834-2e4a54ad7e06.json  20260116-213753-dde42dca-c3b4-4e77-8136-32cab29c2873.json  20260117-120000-e59902e9-8cde-4257-b951-a2fa42d831dc.json  20260117-121500-8b353c46-9d21-42c9-849a-a7d233ad66f0.json  20260117-122000-f6a445ff-b6c5-4b15-8988-a84163e1f575.json  20260117-123000-a7a604c2-32d1-48b9-b931-16ac32ca99e5.json  20260117-185236-d9fefc24-1896-4a8d-9c2f-0a0cd26c74d7.json  20260118-192300-dccb732d-7882-46d1-a85b-f76e556af8b0.json  20260118-211500-944fb85e.json  20260119-215206-bb3d1158-5004-44af-b6f1-a12336a705b9.json  20260119-231557-faa2d88e-7935-478c-b345-8e016b96e457.json  20260122-175400-99950a9e.json
.ai-context/responses/: 031817b3-d7fb-4490-81fa-8caf00328ff3.json  067c913e-92f6-48d9-9834-2e4a54ad7e06.json  3443c6d5-d5a9-457e-8986-f78671ca027f.json  3b482eef-dbf8-41b1-b2a7-d6c9309980e0.json  892649a2-5197-454e-8d6b-c750695b520b.json  8b353c46-9d21-42c9-849a-a7d233ad66f0.json  944fb85e-01cf-4cd1-96b4-2ba26b5644b3.json  99950a9e-4d8d-4042-a5d8-667188b16ed0.json  9f7211bb-6784-4e47-b450-bf52e66e91be.json  a7a604c2-32d1-48b9-b931-16ac32ca99e5.json  aa5555fe-2cd2-4c5d-aa16-81dbba78eaad.json  bb3d1158-5004-44af-b6f1-a12336a705b9.json  c2105e02-8739-4548-9401-118a0d842093.json  d9fefc24-1896-4a8d-9c2f-0a0cd26c74d7.json  dccb732d-7882-46d1-a85b-f76e556af8b0.json  dde42dca-c3b4-4e77-8136-32cab29c2873.json  e59902e9-8cde-4257-b951-a2fa42d831dc.json  (+2 more)
.claude/: settings.json
.claude.backup/: settings.local.json
.codex/: config.toml  version.json
.github/: dependabot.yml  labeler.yml
.husky/: pre-commit
.serena/: project.yml
docs/: DEV_BASIC_AUTH.md  README.md  SECURITY.md  SECURITY_SCANNING.md  cdk-nag.md  codebuild-architecture.md  coverage.md  deployment.md  monitoring.md  performance-optimization.md  rust-migration-guide.md  security-validation.md  testing-coverage.md  testing-strategy.md
go-functions/: .golangci.yml  Makefile  README.md  coverage.html  coverage.out  coverage_atomic.out  coverage_ci_test.out  coverage_clients.out  coverage_createpost.html  coverage_createpost.out  coverage_createpost_full.out  coverage_get_public.out  coverage_getpost.out  coverage_getuploadurl.out  coverage_list.out  coverage_login.out  coverage_metrics.out  coverage_norace.out  coverage_parity.out  coverage_pkg.out  coverage_race.out  coverage_refresh.out  coverage_test.out  coverage_tracing.out  go.mod  go.sum
infrastructure/: .eslintrc.cjs  cdk.context.json.example  cdk.json  jest.config.cjs  jest.config.js  package-lock.json  package.json  test-nag-debug.ts  test-nag-details.ts  tsconfig.json
playwright-report/: index.html
playwright-report-admin/: index.html
rust-functions/: Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml
rust-functions/auth/login/: Cargo.toml
rust-functions/auth/login/src/: main.rs
rust-functions/auth/logout/: Cargo.toml
rust-functions/auth/logout/src/: main.rs
rust-functions/auth/refresh/: Cargo.toml
rust-functions/auth/refresh/src/: main.rs
rust-functions/common/: Cargo.toml
rust-functions/common/src/: clients.rs  constants.rs  error.rs  lib.rs  markdown.rs  metrics.rs  tracing_config.rs  types.rs
rust-functions/events/: create_post.json  delete_image.json  delete_post.json  get_post.json  get_public_post.json  get_upload_url.json  list_posts.json  login.json  logout.json  refresh.json  update_post.json
rust-functions/images/delete_image/: Cargo.toml
rust-functions/images/delete_image/src/: main.rs
rust-functions/images/get_upload_url/: Cargo.toml
rust-functions/images/get_upload_url/src/: main.rs
rust-functions/posts/create_post/: Cargo.toml
rust-functions/posts/create_post/src/: main.rs
rust-functions/posts/delete_post/: Cargo.toml
rust-functions/posts/delete_post/src/: main.rs
rust-functions/posts/get_post/: Cargo.toml
rust-functions/posts/get_post/src/: main.rs
rust-functions/posts/get_public_post/: Cargo.toml
rust-functions/posts/get_public_post/src/: main.rs
rust-functions/posts/list_posts/: Cargo.toml
rust-functions/posts/list_posts/src/: main.rs
rust-functions/posts/update_post/: Cargo.toml
rust-functions/posts/update_post/src/: main.rs
rust-functions/scripts/: build-lambda.sh  invoke-local.sh  local-dev.sh  localstack-init.sh  run-api-parity-tests.sh  run-integration-tests.sh
rust-functions/tests/: api_parity_tests.rs  integration_tests.rs
rust-functions/tests/api_parity/: auth_parity.rs  images_parity.rs  mod.rs  posts_parity.rs  test_utils.rs
rust-functions/tests/integration/: cognito_tests.rs  dynamodb_tests.rs  mod.rs  s3_tests.rs  test_helpers.rs
scripts/: README.md  analyze-issue-conflicts.sh  cleanup-test-data.js  codex-review-daemon.sh  generate-coverage-badges.js  local-deploy.sh  run-claude.sh  run-codex-daemon.sh  start-ai-dev.sh  sync-ai-docs.ts
terraform/: .checkov.yaml  .pre-commit-config.yaml  .terraform.lock.hcl  .trivyignore  README.md  architecture.drawio  versions.tf
test-results/: results-admin.json  results.json
test-results-admin/: .last-run.json
(+713 files in other folders)
