[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared types, utilities, and observability configuration for Lambda functions"

[lib]
name = "common"
path = "src/lib.rs"

[features]
default = []
integration = []

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# DynamoDB serde integration
serde_dynamo = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
aws-sdk-cloudwatch = { workspace = true }

# AWS Smithy types for error handling
aws-smithy-runtime-api = "1"

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Markdown processing
pulldown-cmark = { workspace = true }
ammonia = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Lambda runtime
lambda_runtime = { workspace = true }
lambda_http = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
