[package]
name = "list_posts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lambda function for listing blog posts with pagination"

[[bin]]
name = "list_posts"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
lambda_runtime = { workspace = true }
lambda_http = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_dynamo = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio-test = { workspace = true }
